cartopy/docs/v0.19/_sources/gallery/vector_data/streamplot.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/vector_data/streamplot.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_gallery_vector_data_streamplot.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_vector_data_streamplot.py:


Streamplot
----------

Generating a vector-based streamplot.

.. GENERATED FROM PYTHON SOURCE LINES 8-29



.. image:: /gallery/vector_data/images/sphx_glr_streamplot_001.png
    :alt: streamplot
    :class: sphx-glr-single-img





.. code-block:: default

    import matplotlib.pyplot as plt

    import cartopy.crs as ccrs
    from arrows import sample_data


    def main():
        fig = plt.figure(figsize=(10, 5))
        ax = fig.add_subplot(1, 1, 1, projection=ccrs.PlateCarree())
        ax.set_extent([-90, 75, 10, 85], crs=ccrs.PlateCarree())
        ax.coastlines()

        x, y, u, v, vector_crs = sample_data(shape=(80, 100))
        magnitude = (u ** 2 + v ** 2) ** 0.5
        ax.streamplot(x, y, u, v, transform=vector_crs,
                      linewidth=2, density=2, color=magnitude)
        plt.show()


    if __name__ == '__main__':
        main()


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  1.964 seconds)


.. _sphx_glr_download_gallery_vector_data_streamplot.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: streamplot.py <streamplot.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: streamplot.ipynb <streamplot.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
